# cwe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  Readme.ru.md  docker-compose.yml
.github/workflows/: env.json  rust_ci.yml
common/: Cargo.toml
common/src/: chat_model.rs  lib.rs  model.rs  templekafeuzac.rs
db/: Cargo.toml  Dockerfile  env.example  pstgresql.conf
db/migrations/: 20240518_00_create_table_messages.sql  20240518_00_create_table_users.sql
db/postgres/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  postgresql.conf
db/postgres/migrations/: 20240519045416_create_table_messages.sql  20240519045538_create_table_sessions.sql  20240519085637_create_sessions_table.up.sql  20240519085645_create_messages_table.up.sql
db/src/: config.rs  db.rs  lib.rs
deployment/ansible/: deploy.yml
deployment/kubernetes/haproxy/: haproxy-config.yaml  haproxy-deployment.yaml
deployment/kubernetes/postgres/: postgres-config.yaml  postgres-deployment.yaml  postgres-pvc.yaml
deployment/kubernetes/webserver/: web-server-deployment.yaml
deployment/terraform/: .terraform.lock.hcl  hpa.tf  main.tf  network_policies.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
deployment/terraform/.terraform/modules/: modules.json
deployment/terraform/modules/haproxy/: config_maps.tf  deployment.tf  main.tf  secrets.tf  service.tf  variables.tf
haproxy/: Dockerfile  entrypoint.sh  env.example  haproxy.cfg
java-server/: env.example
postgres/: Dockerfile  entrypoint.sh  env.example  postgresql.conf
scratch/: main.tf
server/: Cargo.toml  Dockerfile  entrypoint.sh
server/src/: chat.rs  config.rs  db.rs  main.rs  server_config.rs
server/static/: index.html
(+17 files in other folders)
