[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "tls-rustls",
    "postgres",
] }
tracing = "0.1"
common = { path = "../common" }
