[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.59.0", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
